[UI] : Fixed messages scrollbar UI

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -61,3 +61,22 @@
 .grainy {
   background-image: url("/grainy.png");
 }
+
+.scrollbar-w-2::-webkit-scrollbar {
+  width: 0.25rem;
+  height: 0.25rem;
+}
+
+.scrollbar-track-blue-lighter::-webkit-scrollbar-track {
+  --bg-opacity: 0.5;
+  background-color: hsl(var(--card));
+}
+
+.scrollbar-thumb-blue::-webkit-scrollbar-thumb {
+  --bg-opacity: 0.5;
+  background-color: hsl(var(--primary) / 0.5);
+}
+
+.scrollbar-thumb-rounded::-webkit-scrollbar-thumb {
+  border-radius: 7px;
+}
